-
Bug
-
Resolution: Done
-
P1: Critical
-
6.2.3, 6.2, 6.3.0 Alpha, 6.3
-
6.2.1, 6.2.2, 6.3.0 Feature Freeze
-
-
d62c216cbd (qt/qtdeclarative/dev) d62c216cbd (qt/tqtc-qtdeclarative/dev) d62c216cbd (qt/tqtc-qtdeclarative/6.3) 8209d04a90 (qt/qtdeclarative/6.2) 8209d04a90 (qt/tqtc-qtdeclarative/6.2)
The following segfaults if run with "qml". Since I've never tried using Binding before this might be incorrect code. But presumably segfault indicates a bug somewhere.
import QtQuick Rectangle { id: top; objectName: "top" visible:true; width:300; height:300 Text { id: trtext width: 30; height: 30 text: "1234.56" font.bold: true Binding { target: trtext.font; property: 'bold' value: false; when: width < 30 } } }
P.S. Something is whacked with pasting code into this bug system – newlines seem to be randomly removed and have to be put back with hand editing
- resulted in
-
QTBUG-99126 Binding should either reject or properly handle non-object targets
-
- Closed
-
For Gerrit Dashboard: QTBUG-98367 | ||||||
---|---|---|---|---|---|---|
# | Subject | Branch | Project | Status | CR | V |
385721,4 | Don't crash when accessing QVariant data pointer | dev | qt/qtdeclarative | Status: MERGED | +2 | 0 |
385782,3 | Don't crash when accessing QVariant data pointer | 6.2 | qt/qtdeclarative | Status: MERGED | +2 | 0 |